# Cache

./: .editorconfig  .gitignore  CMakeLists.txt  Hallucination_test.sh  Latency_test.sh  README.md  README_tmp.html  ggml-backend.c  ggml-common.h  ggml-quants.c  ggml-quants.h  ggml.c  ggml.h  llama.cpp  llama.h  memory.sh  monitor_memory.sh  perplexity_results.csv
common/: common.cpp  common.h
examples/llama-bench/: llama-bench.cpp
examples/main/: CMakeLists.txt  main.cpp
examples/perplexity/: CMakeLists.txt  long_context_perplexity.cpp  perplexity.cpp
experiment/: README.md  README_optimization.md  requirements.txt  script_llama_cli.sh
experiment/Latency/: Context_Size_and_Tokens_per_Second.csv  Context_Size_and_Tokens_per_Second3.csv  Context_Size_and_Tokens_per_Second_1.csv  Context_Size_and_Tokens_per_Second_2.csv  Context_Size_and_Tokens_per_Second_3.csv  Context_Size_and_Tokens_per_Second_4.csv  Context_Size_and_Tokens_per_Second_5.csv  Latency.ipynb
experiment/perplexity/: CMakeLists.txt  count_input.py  llama_long_perplexity_last.sh  long_context_perplexity.cpp  perplexity_results.csv
kvcache_engine/: CMakeLists.txt  MyClass.cpp  MyClass.h  OutputKV.cpp  OutputKV.h  compression.cpp  compression.h  util.cpp  util.h
my_prompts/: bits_analysis.py  compression_rate.py  dump_bits.csv  fetch_prompts.py  k_quant_time.txt  output_10.txt  output_14.txt  output_2.txt  output_4.txt  output_6.txt  perplexity.txt  plot.py  time.py  tmp.txt
prompts/: Ke.txt
requirements/: requirements-convert_legacy_llama.txt
src/: llama.cpp
tests/: test-c.c
(+40 files in other folders)
