set(TARGET llama-perplexity)
add_executable(${TARGET} perplexity.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_link_libraries(${TARGET} PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_11)

set(LONG_CONTEXT_TARGET llama-long-context-perplexity)
add_executable(${LONG_CONTEXT_TARGET} long_context_perplexity.cpp)
install(TARGETS ${LONG_CONTEXT_TARGET} RUNTIME)
target_link_libraries(${LONG_CONTEXT_TARGET} PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${LONG_CONTEXT_TARGET} PRIVATE cxx_std_11)